syntax = "proto3";
package proto;
option go_package = ".;proto";

message Movie {
  string Title = 1;
  string Year = 2;
  string Rated = 3;
  string Released = 4;
  string Runtime = 5;
  string Genre = 6;
  string Director = 7;
  string Writer = 8;
  string Actors = 9;
  string Plot = 10;
  string Language = 11;
  string Country = 12;
  string Awards = 13;
  string Poster = 14;
  repeated Ratings Ratings = 15;
  string Metascore = 16;
  string ImdbRating = 17;
  string ImdbVotes = 18;
  string ImdbID = 19;
  string Type = 20;
  string DVD = 21;
  string BoxOffice = 22;
  string Production = 23;
  string Website = 24;
  string Response = 25;
}

message Ratings {
  string Source = 1;
  string Value = 2;
}

message MovieList {
  uint32 code = 1;
  string message = 2;
  repeated Movie data = 3;
}

message MovieDetail {
  uint32 code = 1;
  string message = 2;
  Movie data = 3;
}

message MovieRequestList {
  uint32 page = 1;
  string keyword = 2;
}

message MovieRequestDetail {
  string id = 1;
}

service Movies {
  rpc Detail(MovieRequestDetail) returns (MovieDetail) {}
  rpc List(MovieRequestList) returns (MovieList) {}
}